maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:21: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^