maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()) {
    while (getDirection != Direction.NORTH) {
      gauche()
    }
    while (!estFaceMur) {
      avance()
    }
    while (estFaceMur()) {
      keepHandOnSideWall()
    }
  }
}

def keepHandOnSideWall():Boolean = {
  gauche()
  while (estFaceMur()) {
    droite()
  }
  avance()
}